# maskGenerator_CdTe

./: .gitignore  MANIFEST.in  README.md  Save maps pyfai.ipynb  __init__.py  azimuthalMaskGenerator.ipynb  azimuthalMaskGenerator.py  azimuthalMask_recursive.py  copyFiles.py  copyMonitor.py  fluoCorrection.py  imageBkgSubtraction.py  integrationFunctions.py  maskGeneratorCdTe_recursive.py  maskGeneratorIntegraterCdTe.ipynb  maskGeneratorIntegraterCdTe.py  maskGenerator_gainLoop.py  maskGenerator_gainMaps.py  maskGenerator_splitting.py  monitor_to_files.py  pyproject.toml  saveMapsPyfai.py  setup.py
.ipynb_checkpoints/: azimuthalMaskGeneratorTest-checkpoint.ipynb  maskGeneratorIntegraterCdTe-checkpoint.ipynb  maskGeneratorIntegraterCdTe_gainMaps-checkpoint.ipynb  stdev_check-checkpoint.ipynb
azimuthCP/: azimuth.cpp
maskGeneratorBM31/: azimuthGui.py  azimuthalMaskGenerator.py  guiLayout.py  guiLayout.ui  integrationFunctions.py  maskGeneratorCdTe_recursive.py  maskGeneratorIntegraterCdTe.py  maskGeneratorIntegratorGUI.py
